--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,8 +4,35 @@
 }
 .Header {
   position: relative;
-  font-family: work-sans;
+  /* font-family: work-sans; */
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
-.top-purple {
+.top-purple svg{
   width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 480px) {
+    .Header {
+      height: 400px;
+      }
+  .top-purple svg{
+    width: 35px;
+
+    /* display: none; */
+  }
+}
+@media only screen and (max-width: 768px) {
+    .Header {
+        height: 400px;
+        }
+    .top-purple svg{
+        width: 400px;
+        height: 100%;
+  
+      /* display: none; */
+    }
 }
