--- a/src/css/Content.css
+++ b/src/css/Content.css
@@ -38,8 +38,7 @@
   display: none;
   height: auto;
   max-height: 9999px;
-  transition: all 0.5s cubic-bezier(1, 0, 1, 0);
-
+  transition: all 0.5s ease-in-out;
 }
 .star-and-faq {
   width: 30%;
@@ -48,4 +47,17 @@
   align-items: center;
   font-weight: 700;
   font-size: 24px;
+}
+@media only screen and (max-width: 480px) {
+  .Content {
+    width: 70%;
+    margin: auto;
+    margin-top: 20%;
+    top: 0;
+    left: 9%;
+  }
+  .star-and-faq {
+    width: 65%;
+    font-size: 20px;
+  }
 }
